@@ -1,5 +1,6 @@
 mkdocs-material-3.x.x (2018-xx-xx)
 
+  * Added Croatian translations
   * Fixed #899: Skip-to-content link invalid from 2nd level on
   * Fixed #902: Missing URL filter in footer for FontAwesome link
 
